@startuml

class World {
  -size: Integer
  -seed: Integer
  -tiles: Tile[]

  +getTilesData()
}
World "1" -- "Many" Tile

class Tile {
  +getData()
}

class Situation {
  -nations: Nation{}

  +addNation()
  +removeNation()
  +getNationData()
}
Situation "1" -- "Many" Nation

class Nation {
  -name: String
  +getData()
}

@enduml